@@ -1,4 +1,4 @@
-.\" RCSid "$Id: rsensor.1,v 1.4 2010/09/26 15:41:46 greg Exp $"
+.\" RCSid "$Id: rsensor.1,v 1.5 2012/06/14 22:42:21 greg Exp $"
 .TH RSENSOR 1 4/11/2008 RADIANCE
 .SH NAME
 rsensor - compute sensor signal from a RADIANCE scene
@@ -135,4 +135,4 @@ RAYPATH		the directories to check for auxiliary files.
 .SH AUTHOR
 Greg Ward for Architectural Energy Corporation
 .SH "SEE ALSO"
-oconv(1), rpict(1), rtcontrib(1), rtrace(1)
+oconv(1), rpict(1), rcontrib(1), rtrace(1)
