@@ -1,4 +1,4 @@
-.\" RCSid "$Id: rtrace.1,v 1.22 2010/10/08 22:08:26 greg Exp $"
+.\" RCSid "$Id: rtrace.1,v 1.23 2012/06/14 22:42:21 greg Exp $"
 .TH RTRACE 1 10/17/97 RADIANCE
 .SH NAME
 rtrace - trace rays in RADIANCE scene
@@ -670,4 +670,4 @@ option.
 Greg Ward
 .SH "SEE ALSO"
 getinfo(1), lookamb(1), oconv(1), pfilt(1), pinterp(1),
-pvalue(1), rpict(1), rtcontrib(1), rvu(1), vwrays(1), ximage(1)
+pvalue(1), rpict(1), rcontrib(1), rvu(1), vwrays(1), ximage(1)
