@@ -1,4 +1,4 @@
-# RCSid: $Id: Rmakefile,v 2.64 2012/06/09 07:16:47 greg Exp $
+# RCSid: $Id: Rmakefile,v 2.65 2012/06/14 22:42:21 greg Exp $
 #
 # Compiles for ray tracing programs.
 #
@@ -100,6 +100,7 @@ all:	$(PROGS) $(RCLIB) $(SPECIAL)
 install:	all rayinit.cal
 	$(INSTALL) $(PROGS) $(INSTDIR)
 	cd $(INSTDIR) ; rm -f rview ; ln -s rvu rview
+	cd $(INSTDIR) ; rm -f rtcontrib ; ln -s rcontrib rtcontrib
 	rm -f $(LIBDIR)/rayinit.cal
 	cp rayinit.cal $(LIBDIR)
 
