@@ -1,4 +1,4 @@
-# RCSid: $Id: Rmakefile,v 2.60 2011/06/09 13:17:28 greg Exp $
+# RCSid: $Id: Rmakefile,v 2.61 2012/06/14 22:42:21 greg Exp $
 #
 # Radiance makefile for utility programs
 #
@@ -20,7 +20,7 @@ INSTDIR = /usr/local/bin
 LIBDIR = /usr/local/lib/ray
 
 PROGS = findglare glarendx rpiece rad ranimate ranimove vwright getinfo \
-		vwrays xglaresrc rtcontrib rsensor dctimestep rttree_reduce
+		vwrays xglaresrc rsensor dctimestep rttree_reduce
 
 all:	$(PROGS)
 
